I fixed the textarea of ​​the input-wrapper label that I had done wrong, styled it, and applied a new method to the span so that the contrast is correct

--- a/Projetos/Projeto 3 - Formulário/CSS/style.css
+++ b/Projetos/Projeto 3 - Formulário/CSS/style.css
@@ -92,10 +92,14 @@ fieldset legend {
     margin-left: 12px;
     font-size: 12px;
     line-height: 20px;
-    color: #C1BCCC;
+    color: #A9A7AF;
 }
 
-.input-wrapper input {
+.input-wrapper label span:hover {
+    color: #6C6A71;
+}
+
+.input-wrapper input, .input-wrapper textarea {
     background: #FAFAFC;
     border: 1px solid #E6E6F0;
     border-radius: 8px;
@@ -103,5 +107,10 @@ fieldset legend {
     padding: 0 24px;
     font-size: 16px;
     line-height: 26px;
-    color: #C1BCCC;
+    color: #6C6A71;
+}
+
+.input-wrapper textarea {
+    padding: 0;
+    height: 168px;
 }
